Prevent textbox border from covering cursor

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
-  .focus-indicator-ext {
-      outline: 2px solid var(--focus-indicator-color) !important;
-      outline-offset: 0 !important;
-      border: 1px solid var(--focus-indicator-color) !important;
-      box-shadow: 0 0 0 1px var(--focus-indicator-color) inset !important;
-  }
+.focus-indicator-ext {
+  outline: 2px solid var(--focus-indicator-color) !important;
+  outline-offset: 0 !important;
+  border: 1px solid var(--focus-indicator-color) !important;
+  box-shadow: 0 0 0 1px var(--focus-indicator-color) inset !important;
+}
+
+.focus-indicator-ext-textarea {
+  outline: 2px solid var(--focus-indicator-color) !important;
+  outline-offset: 0 !important;
+  border: 1px solid var(--focus-indicator-color) !important;
+}
